kubernetes/namespace.yml
# Kubernetes Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops
  labels:
    app: devsecops-platform
